# memcheck

./: .clang-format  CMakeLists.txt  LICENSE  README.md  SConscript
example/: main.c
example/Linux/: main.c
example/RT-Thread/: main.c
inc/memcheck/: backtrace.h  list.h  memcheck.h  memcheck_config.h
src/: backtrace_cortex_m4.c  backtrace_simulator.c  memcheck.c
